# TA-learning

./: CMakeLists.txt  README.md  aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  img.ppm  interval.h  main.cpp  material.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  stb_image.h  texture.h
cuda/: CMakeLists.txt  add.cu  camera.h  color.h  demo.cpp  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  main.cu  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
game101/: note.md
raytracing/: CMakeLists.txt  img.ppm  main.cpp  material.h  rtweekend.h  sphere.h  vec3.h
